--- a/01-Learn-react-basic/02-JSX基本语法/04-JSX中插入内容.html
+++ b/01-Learn-react-basic/02-JSX基本语法/04-JSX中插入内容.html
@@ -10,9 +10,11 @@
 
 	<div id="root"></div>
 
-	<script src="../../lib/react.development.js"></script>
-	<script src="../../lib/react-dom.development.js"></script>
-	<script src="../../lib/babel.min.js"></script>
+  <!-- 添加依赖，三个包，使用 CDN 引入 -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <!-- babel -->
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
 	<script type="text/babel">
 		class App extends React.Component {
@@ -46,7 +48,7 @@
 				const { firstname, lastname, age, movies } = this.state
 				const fullName = firstname + lastname
 				const liEls = movies.map(item => <li> { item } </li>)
-				
+
 				return (
 					<div>
 						{ /* 可直接显示出来 */ }
@@ -59,7 +61,7 @@
 						<h2>{ String(bbb) } 或 { bbb + '' }</h2>
 						<h2>{ ccc.toString() }</h2>
 
-						{ /* Object 类型不能作为 jsx 标签的子元素被引用 */ }
+						{ /* Object 类型不能直接作为 jsx 标签的子元素被引用 */ }
 						<h2>{ friend.name }</h2>
 						<h2>{ Object.keys(friend) }</h2>
 
