--- a/01-Learn-react-basic/01-react初体验/03-HelloReact重构.html
+++ b/01-Learn-react-basic/01-react初体验/03-HelloReact重构.html
@@ -9,9 +9,11 @@
 <body>
 	<div id="root"></div>
 
-	<script src="../../lib/react.development.js"></script>
-	<script src="../../lib/react-dom.development.js"></script>
-	<script src="../../lib/babel.min.js"></script>
+  <!-- 添加依赖，三个包，使用 CDN 引入 -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <!-- babel -->
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
 	<script type="text/babel">
 		// 使用组件进行代码重构
