--- a/01-Learn-react-basic/02-JSX基本语法/05-JSX中绑定属性.html
+++ b/01-Learn-react-basic/02-JSX基本语法/05-JSX中绑定属性.html
@@ -9,9 +9,11 @@
 <body>
 	<div id="root"></div>
 
-	<script src="../../lib/react.development.js"></script>
-	<script src="../../lib/react-dom.development.js"></script>
-	<script src="../../lib/babel.min.js"></script>
+  <!-- 添加依赖，三个包，使用 CDN 引入 -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <!-- babel -->
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
 	<script type="text/babel">
 		class App extends React.Component {
@@ -41,7 +43,7 @@
 				return (
 					<div>
 						{ /* 基本属性绑定 */ }
-						<h2 title={ title }>title 属性绑定</h2>	
+						<h2 title={ title }>title 属性绑定</h2>
 						<img src={ imgUrl } />
 
 						{ /* 绑定 class 属性，最好使用 className */ }
